@@ -1,7 +1,5 @@
 #!/usr/bin/env python
 
-import six
-
 from agate.columns.base import Column
 
 class TextColumn(Column):
