@@ -1,0 +1,9 @@
+#!/usr/bin/env python
+
+from agate.columns.base import Column
+
+class TimeDeltaColumn(Column):
+    """
+    A column containing :class:`datetime.timedelta` data.
+    """
+    pass
