@@ -8,3 +8,4 @@ six>=1.6.1
 python-dateutil==2.2
 sphinx_rtd_theme>=0.1.6
 wheel>=0.24.0
+pytimeparse>=1.1.5
