@@ -5,7 +5,8 @@ import sys
 
 install_requires = [
     'six==1.6.1',
-    'python-dateutil>=2.2'
+    'python-dateutil>=2.2',
+    'pytimeparse>=1.1.5'
 ]
 
 if sys.version_info == (2, 6):
